feat: add getlistbyactor route
